apps/homepage/overlays/prd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www
  namespace: homepage
  annotations:
    link.argocd.argoproj.io/external-link: https://www.devxp-tech.io
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - devxp-tech.io
  http:
    - match:
        - uri:
            prefix: /
      redirect:
        authority: www.devxp-tech.io
